--- a/static/styles.css
+++ b/static/styles.css
@@ -7,6 +7,15 @@
     max-width: 850px;
 }
 
+@media screen 
+  and (max-device-width: 600px)
+  and (orientation: portrait) {
+    #dashboard-container {
+    width: auto;
+}
+
+}
+
 .value-box .caption {
     white-space: pre-line;
 }
