try "mobile first" #3

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,15 +3,14 @@
     height: 40px;
 }
 
-#dashboard-container {
+/* #dashboard-container {
     max-width: 850px;
-}
+} */
 
 @media screen 
-  and (max-device-width: 600px)
-  and (orientation: portrait) {
+  and (min-device-width: 900px) {
     #dashboard-container {
-    width: 350px;
+    max-width: 850px;
 }
 
 }
