--- a/static/styles.css
+++ b/static/styles.css
@@ -3,17 +3,16 @@
     height: 40px;
 }
 
-/* #dashboard-container {
+#dashboard-container {
     max-width: 850px;
-} */
+}
 
-@media screen 
+/* @media screen 
   and (min-device-width: 900px) {
     #dashboard-container {
     max-width: 850px;
-}
-
-}
+    }
+} */
 
 .value-box .caption {
     white-space: pre-line;
